--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulazione Concorso Operatore Socio Sanitario - Modulo 12</title>
+    <title>Simulazione Concorso Operatore Socio Sanitario </title>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -233,7 +233,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Simulazione Concorso Operatore Socio Sanitario - Modulo 12</h1>
+        <h1>Simulazione Concorso Operatore Socio Sanitario </h1>
         <div class="question-nav" id="questionNav"></div>
         <div id="timer">Tempo rimanente: <span id="time">30:00</span></div>
         <div id="quiz"></div>
@@ -248,12 +248,7 @@
     <script>
         // Array di domande (331-360) con opzioni mescolate casualmente
         const questions = [
-            {
-                question: "Cos’è l’artrite reumatoide?",
-                options: ["Un’infiammazione della vescica", "Una malattia autoimmune delle articolazioni", "Un accumulo di liquido nei polmoni"],
-                correct: "Una malattia autoimmune delle articolazioni",
-                explanation: "L’artrite reumatoide è una malattia autoimmune che causa infiammazione cronica delle articolazioni, con sintomi come dolore, gonfiore e rigidità. Non è un’infiammazione della vescica né un edema polmonare. Gli OSS devono monitorare il dolore, assistere nella mobilità e segnalare deformità articolari."
-            },
+            
             {
                 question: "Quale è un segno tipico dell’artrite reumatoide?",
                 options: ["Rigidità articolare mattutina", "Poliuria", "Ittero"],
